# ITAClab1-tarz

./: README.md  信息论第一次大作业实验报告.md
streamtarz/: CMakeLists.txt  a  b  data.txt  huffman.h  huffman_code.cpp  huffman_code.h  huffman_tree.cpp  huffman_tree.h  lz78.h  lz78_code.h  lz78_tree.cpp  lz78_tree.h  main.cpp  output  streamCLI.cpp  streamtarz  tarz
tarz/: CLI  CLI.cpp  CMakeLists.txt  a  b  huffman.cpp  huffman.h  huffman_code.h  huffman_tree.h  lz78.cpp  lz78.h  lz78_code.cpp  lz78_code.h  lz78_tree.h  main.cpp  output  tarz
tarz/lab1_data/: output  output2
